<resources>
    <string name="app_name">JavaApp</string>
    <string name="start_text1">Привет, ты хочешь
        запустить свой
        бизнес?</string>
    <string name="text_button1">Да, хочу!</string>
    <string name="text_button2">Нет, я хочу посмотреть товары</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="registr">Регистрация</string>
    <string name="hint_fio">ФИО</string>
    <string name="hint_email">Почта</string>
    <string name="hint_passport">Паспортные данные</string>
    <string name="hint_inn">ИНН</string>
    <string name="hint_pass">Пароль</string>
    <string name="hint_pass_2">Повторить пароль</string>
    <string name="acc_exists">У меня есть аккаунт</string>
    <string name="find">Поиск здания</string>
    <string name="text_build">Наш алгоритм подобрал несколько зданий для вашей кофейни, мы основывались на плотности населений, количестве конкурентов, и средней цены за аренду помещения.</string>
    <string name="png">png</string>
    <string name="back">back</string>
    <string name="zdanie">Выбрать здание</string>
    <string name="supp">Поиск поставщиков</string>
    <string name="text_supp">Для правильного функционирования вашей кофейни вам потребуются поставщики, наш алгоритм собрал поставщиков, которые вам будут полезны.</string>
    <string name="supp_select">Выбрать поставщиков</string>
    <string name="room">Торговое помещение</string>
    <string name="example_price">1 500 200 ₽ в мес.</string>
    <string name="example_address">Октябрьская наб., 44</string>
    <string name="example_address2">Елизаровская, 1.4 км</string>
    <string name="example_text">Аренда торговой площади 460 кв.м в бизнес-центре "Сенатор".</string>

</resources>