<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:layout_weight="1"
android:layout_marginHorizontal="36dp"
android:layout_marginVertical="40dp"
tools:context=".supplier_search">

    <ImageView
        android:id="@+id/png"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/png"
        android:src="@drawable/frame_109" />


    <TextView
        android:id="@+id/find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/png"
        android:layout_marginVertical="10sp"
        android:fontFamily="@font/montserrat_extra_bold"
        android:text="@string/supp"
        android:textColor="@color/main"
        android:textSize="22sp"

        />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/find"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/text_supp"
        android:textSize="22sp" />

    <Button

        android:id="@+id/buttonConfirm1"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_first_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/supp_select"
        android:textAllCaps="false"
        android:textSize="15sp" />

</RelativeLayout>
