<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="36dp"
    android:layout_marginVertical="40dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    >



    <TextView
        android:id="@+id/registr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extra_bold"
        android:text="@string/registr"
        android:textColor="@color/main"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/fio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="7sp"
        android:backgroundTint="@color/hint_color"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/hint_fio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7sp"
        android:backgroundTint="@color/hint_color"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/passport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7sp"
        android:backgroundTint="@color/hint_color"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/hint_passport"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color"
        tools:ignore="TextContrastCheck"
        />

    <EditText
        android:id="@+id/inn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7sp"
        android:backgroundTint="@color/hint_color"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/hint_inn"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7sp"
        android:backgroundTint="@color/hint_color"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/hint_pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="7sp"
        android:backgroundTint="@color/hint_color"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/hint_pass_2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color"
        tools:ignore="TextContrastCheck"


        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="match_parent"
            android:layout_height="54dp"

            android:background="@drawable/bg_first_button"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <Button
            android:id="@+id/buttonFalse"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_second_button"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/acc_exists"
            android:textAllCaps="false"
            android:textColor="@color/main"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonConfirm" />
    </LinearLayout>
</LinearLayout>