<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_marginHorizontal="36dp"
    android:layout_marginVertical="40dp"
    tools:context=".building_search">

        <ImageView
            android:id="@+id/png"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/frame"
            android:layout_gravity="center"
            android:contentDescription="@string/png"
            />


    <TextView
        android:id="@+id/find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:fontFamily="@font/montserrat_extra_bold"
        android:textColor="@color/main"
        android:textSize="22sp"
        android:text="@string/find"

        />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/text_build"
        android:textSize="22sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonConfirm1"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/bg_first_button"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/zdanie"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
